--- a/package.json
+++ b/package.json
@@ -21,15 +21,32 @@
     "Brandon Harris",
     "Niklas Laxström",
     "Pau Giner",
-    "Santhosh Thottingal",
-    "Siebrand Mazeland"
+    "Santhosh Thottingal"
   ],
+  "main": "dist/uls.js",
+  "dependencies": {
+    "@wikimedia/language-data": "^1.0.2"
+  },
   "devDependencies": {
-    "eslint-config-wikimedia": "0.15.0",
-    "grunt": "1.3",
-    "grunt-contrib-qunit": "3.1.0",
-    "grunt-eslint": "22.0.0",
-    "grunt-stylelint": "0.13.0",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "esbuild": "^0.11.16",
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "esm": "^3.2.25",
+    "jquery": "^3.6.0",
+    "mocha": "^8.3.2",
+    "qunit": "^2.15.0",
+    "rollup": "^2.46.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-esbuild": "^4.2.3",
     "stylelint-config-wikimedia": "0.10.3"
   },
   "repository": {
@@ -40,12 +57,15 @@
     "url": "https://github.com/wikimedia/jquery.uls/issues"
   },
   "engine": {
-    "node": ">=6.11.1"
+    "node": ">=10.6.0"
   },
   "license": "(MIT OR GPL-2.0+)",
   "scripts": {
     "test": "grunt test --verbose",
-    "lint": "grunt lint --verbose",
-    "qunit": "grunt qunit --verbose"
+    "lint:script": "eslint src test",
+    "lint:style": "stylelint src test",
+    "qunit": "qunit --verbose",
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
   }
 }
